--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <nav class="principal-nav">
+        <nav>
             <ul class="menu">
                     <li><a href="index.html">Página 1</a></li>
                     <li><a href="pagina2.html">Página 2</a></li>
@@ -17,12 +17,27 @@
             </ul>
         </nav>
     </header>
-    <div class="centralizar">
-        <main>
-            <p>ncaijocsa</p>
-            <p>ockmaoksncmsa</p>
-        </main>
-    </div>
+    
+    <main>
+        <div class="conteiner">
+            <div class="conteudo-lado">
+                <p>conteudo</p>
+            </div>
+            <div class="conteudo-lado"><p>conteudo</p></div>
+            <div class="conteudo"><h1>amfokqscmiajsokcmachggggfffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffggggggggg</h1></div>
+        </div>
+
+    </main>
+   
+
+    <footer>
+        <ul>
+            <li><a href="https://www.instagram.com/talles_cardoso1/" target="_blank">Instagram</a></li>
+            <li><a href="https://github.com/Talles2305" target="_blank">GitHub</a></li>
+            <li><p><strong>E-mail:</strong> tco4@alunp.ifnmg.edu.br</p></li>
+            <li><p><strong>Contato:</strong> +55 33 999558429</p></li>
+        </ul>
+    </footer>
    
 </body>
 </html>
