--- a/pagina2.html
+++ b/pagina2.html
@@ -7,7 +7,29 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <a href="index.html">pagina 1</a>
-    
+    <header>
+        <nav class="principal-nav">
+            <ul class="menu">
+                    <li><a href="index.html">Página 1</a></li>
+                    <li><a href="pagina2.html">Página 2</a></li>
+                    <li><a href="pagina3.html">Página 3</a></li>
+                    <li><a href="pagina2.html">Página 4</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="centralizar">
+        <main>
+            <div class="conteudo">Conteudo 1</div>
+            <div class="conteudo">Conteudo 2</div>
+        </main>
+    </div>
+
+    <footer class="rodape">
+        <a href="https://www.instagram.com/talles_cardoso1/" target="_blank">Instagram</a>
+        <a href="https://github.com/Talles2305" target="_blank">GitHub</a>
+        <p><strong>E-mail:</strong> tco4@alunp.ifnmg.edu.br</p>
+        <p><strong>Contato:</strong> +55 33 999558429</p>
+    </footer>
+   
 </body>
 </html>
