--- a/pagina2.html
+++ b/pagina2.html
@@ -5,30 +5,122 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <nav class="principal-nav">
+        <img class="icon" src="img/image.png" alt="Icone">
+        <h1 class="h1-1 new-amsterdam-regular">CORINTHIANS</h1>
+        <nav>
             <ul class="menu">
-                    <li><a href="index.html">Página 1</a></li>
-                    <li><a href="pagina2.html">Página 2</a></li>
-                    <li><a href="pagina3.html">Página 3</a></li>
-                    <li><a href="pagina2.html">Página 4</a></li>
+                    <li><a class="new-amsterdam-regular" href="index.html">História</a></li>
+                    <li><a class="new-amsterdam-regular" href="pagina2.html">Título</a></li>
+                    <li><a class="new-amsterdam-regular" href="pagina3.html">Feminino</a></li>
+                    <li><a class="new-amsterdam-regular" href="pagina2.html">Formulário</a></li>
             </ul>
         </nav>
     </header>
-    <div class="centralizar">
-        <main>
-            <div class="conteudo">Conteudo 1</div>
-            <div class="conteudo">Conteudo 2</div>
-        </main>
-    </div>
+    
+    <main>
+        <div class="conteiner">
+            <h1>Principais Títulos do Timão</h1>
+            <p class="conteudo">
+                Os títulos conquistados pelo Sport Club Corinthians Paulista refletem sua importância e sucesso no cenário do futebol 
+                brasileiro e internacional. Com uma trajetória marcada por conquistas significativas, o Corinthians se destaca como 
+                uma das principais potências do esporte. Entre suas vitórias mais notáveis estão os títulos do Campeonato Brasileiro, 
+                a Copa do Brasil, a Copa Libertadores e o Mundial de Clubes da FIFA. Cada conquista não só reforça o prestígio do clube, 
+                mas também demonstra a paixão e dedicação de sua vasta torcida.
+            </p>
 
-    <footer class="rodape">
-        <a href="https://www.instagram.com/talles_cardoso1/" target="_blank">Instagram</a>
-        <a href="https://github.com/Talles2305" target="_blank">GitHub</a>
-        <p><strong>E-mail:</strong> tco4@alunp.ifnmg.edu.br</p>
-        <p><strong>Contato:</strong> +55 33 999558429</p>
+            <h2>Campeonato Brasileiro</h2>
+            <p class="conteudo">
+                O Corinthians é um dos clubes mais vitoriosos do Brasil, com conquistas significativas tanto no cenário nacional 
+                quanto internacional. Entre os principais títulos do clube estão:
+            </p>
+
+            <ul class="conteudo-lista" class="conteudo-lado">
+                <li >Campeonato Brasileiro (7 títulos):
+                    <ul>
+                        <li>1990</li>
+                        <li>1998</li>
+                        <li>1999</li>
+                        <li>2005</li>
+                        <li>2011</li>
+                        <li>2015</li>
+                        <li>2017</li>
+                    </ul>
+                </li>
+            </ul>
+            <img class="conteudo-lado" src="img/brasileirao.png" alt="">
+
+            <h2 class="conteudo">Copa do Brasil</h2>
+            <p class="conteudo">
+                O Corinthians conquistou a Copa do Brasil três vezes, consolidando sua força no cenário nacional. 
+                O clube venceu a competição em uma final memorável contra o Cruzeiro, além de outras conquistas 
+                notáveis que fortaleceram sua posição no futebol brasileiro. Essas vitórias são marcos importantes na 
+                história do clube.
+            </p>
+            <ul class="conteudo-lista" class="conteudo-lado">
+                <li>Copa do Brasil (3 Títulos)
+                    <ul>
+                        <li>1995</li>
+                        <li>2002</li>
+                        <li>2009</li>
+                    </ul>
+                </li>
+            </ul>
+            <img class="conteudo-lado" src="img/copa-do-brasil.png" alt="">
+            
+            <h2 class="conteudo">Mudial</h2>
+            <p class="conteudo">
+                O Corinthians conquistou o Mundial de Clubes da FIFA em duas ocasiões, sendo o primeiro clube a vencer 
+                a competição. Esses títulos destacam o clube no cenário global e são marcos importantes em sua história. 
+                Ambos os títulos foram conquistados de maneira memorável e inconfundível.
+            </p>
+            <ul class="conteudo-lista" class="conteudo-lado">
+                <li>Mundial de Clubes da FIFA (2 títulos)
+                    <ul>
+                        <li>2000</li>
+                        <li>2012</li>
+                    </ul>
+                </li>
+            </ul>
+            <img class="conteudo-lado" src="img/mundial.jpg" alt="">
+
+            <h2 class="conteudo">Campeonato Paulista</h2>
+            <p class="conteudo">
+                O Corinthians é um dos maiores vencedores do Campeonato Paulista, com 30 títulos ao longo de sua história. 
+                Essas conquistas reforçam a sua posição como uma força dominante no futebol estadual. O clube tem uma rica 
+                tradição e uma profunda rivalidade no torneio. Abaixo contém alguns desses títulos.
+            </p>
+
+            <ul class="conteudo-lista" class="conteudo-lado">
+                <li>Campeonatos Paulistas (30 títulos)</li>
+                <ul>
+                    <li>1914</li>
+                    <li>1916</li>
+                    <li>1930</li>  
+                    <li>1937</li>
+                    <li>1997</li>
+                    <li>1999</li>
+                    <li>2013</li>
+                    <li>2017</li>
+                    <li>2018</li>
+                </ul>
+            </ul>
+            <img class="conteudo-lado" src="img/paulista.png" alt="">
+        </div>
+    </main>
+   
+    <footer>
+        <ul>
+            <li><a href="https://www.instagram.com/talles_cardoso1/" target="_blank">Instagram</a></li>
+            <li><a href="https://github.com/Talles2305" target="_blank">GitHub</a></li>
+            <li><p><strong>E-mail:</strong> tco4@alunp.ifnmg.edu.br</p></li>
+            <li><p><strong>Contato:</strong> +55 33 999558429</p></li>
+        </ul>
     </footer>
    
 </body>
