--- a/pagina2.html
+++ b/pagina2.html
@@ -73,7 +73,7 @@
             </ul>
             <img class="conteudo-lado" src="img/copa-do-brasil.png" alt="">
             
-            <h2 class="conteudo">Mudial</h2>
+            <h2 class="conteudo">Mundial</h2>
             <p class="conteudo">
                 O Corinthians conquistou o Mundial de Clubes da FIFA em duas ocasiões, sendo o primeiro clube a vencer 
                 a competição. Esses títulos destacam o clube no cenário global e são marcos importantes em sua história. 
