--- a/pagina2.html
+++ b/pagina2.html
@@ -40,7 +40,7 @@
                 quanto internacional. Entre os principais títulos do clube estão:
             </p>
 
-            <ul class="conteudo-lista" class="conteudo-lado">
+            <ul class="conteudo-lista conteudo-lado">
                 <li >Campeonato Brasileiro (7 títulos):
                     <ul>
                         <li>1990</li>
@@ -62,7 +62,7 @@
                 notáveis que fortaleceram sua posição no futebol brasileiro. Essas vitórias são marcos importantes na 
                 história do clube.
             </p>
-            <ul class="conteudo-lista" class="conteudo-lado">
+            <ul class="conteudo-lista conteudo-lado">
                 <li>Copa do Brasil (3 Títulos)
                     <ul>
                         <li>1995</li>
@@ -79,7 +79,7 @@
                 a competição. Esses títulos destacam o clube no cenário global e são marcos importantes em sua história. 
                 Ambos os títulos foram conquistados de maneira memorável e inconfundível.
             </p>
-            <ul class="conteudo-lista" class="conteudo-lado">
+            <ul class="conteudo-lista conteudo-lado">
                 <li>Mundial de Clubes da FIFA (2 títulos)
                     <ul>
                         <li>2000</li>
@@ -96,7 +96,7 @@
                 tradição e uma profunda rivalidade no torneio. Abaixo contém alguns desses títulos.
             </p>
 
-            <ul class="conteudo-lista" class="conteudo-lado">
+            <ul class="conteudo-lista conteudo-lado">
                 <li>Campeonatos Paulistas (30 títulos)</li>
                 <ul>
                     <li>1914</li>
