--- a/pagina2.html
+++ b/pagina2.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <img class="icon" src="img/image.png" alt="Icone">
-        <h1 class="h1-1 new-amsterdam-regular">CORINTHIANS</h1>
+        <h1 class="h1-1 new-amsterdam-regular">
+            <a href="https://www.corinthians.com.br/" target="_blank" class="redirect">CORINTHIANS</a>
+        </h1>
         <nav>
             <ul class="menu">
                     <li><a class="new-amsterdam-regular" href="index.html">História</a></li>
@@ -40,7 +42,7 @@
                 quanto internacional. Entre os principais títulos do clube estão:
             </p>
 
-            <ul class="conteudo-lista conteudo-lado">
+            <ul class="conteudo-lista conteudo">
                 <li >Campeonato Brasileiro (7 títulos):
                     <ul>
                         <li>1990</li>
@@ -53,8 +55,10 @@
                     </ul>
                 </li>
             </ul>
-            <img class="conteudo-lado" src="img/brasileirao.png" alt="">
 
+            <img class="conteudo-lado" src="img/brasileirao.png" alt="">
+            <iframe class="conteudo-lado" width="560" height="315" src="https://www.youtube.com/embed/DIfhRAx2SXM?si=wsX4SEhwvpaEeQfL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            
             <h2 class="conteudo">Copa do Brasil</h2>
             <p class="conteudo">
                 O Corinthians conquistou a Copa do Brasil três vezes, consolidando sua força no cenário nacional. 
@@ -89,7 +93,7 @@
             </ul>
             <img class="conteudo-lado" src="img/mundial.jpg" alt="">
 
-            <h2 class="conteudo">Campeonato Paulista</h2>
+            <h2>Campeonato Paulista</h2>
             <p class="conteudo">
                 O Corinthians é um dos maiores vencedores do Campeonato Paulista, com 30 títulos ao longo de sua história. 
                 Essas conquistas reforçam a sua posição como uma força dominante no futebol estadual. O clube tem uma rica 
@@ -118,7 +122,7 @@
         <ul>
             <li><a href="https://www.instagram.com/talles_cardoso1/" target="_blank">Instagram</a></li>
             <li><a href="https://github.com/Talles2305" target="_blank">GitHub</a></li>
-            <li><p><strong>E-mail:</strong> tco4@alunp.ifnmg.edu.br</p></li>
+            <li><p><strong>E-mail:</strong> tco4@aluno.ifnmg.edu.br</p></li>
             <li><p><strong>Contato:</strong> +55 33 999558429</p></li>
         </ul>
     </footer>
