--- a/pagina4.html
+++ b/pagina4.html
@@ -12,7 +12,9 @@
 <body>
     <header>
         <img class="icon" src="img/image.png">
-        <h1 class="h1-1 new-amsterdam-regular">CORINTHIANS</h1>
+        <h1 class="h1-1 new-amsterdam-regular">
+            <a href="https://www.corinthians.com.br/" target="_blank" class="redirect">CORINTHIANS</a>
+        </h1>
         <nav>
             <ul class="menu">
                     <li><a class="new-amsterdam-regular" href="index.html">História</a></li>
@@ -119,7 +121,7 @@
         <ul>
             <li><a href="https://www.instagram.com/talles_cardoso1/" target="_blank">Instagram</a></li>
             <li><a href="https://github.com/Talles2305" target="_blank">GitHub</a></li>
-            <li><p><strong>E-mail:</strong> tco4@alunp.ifnmg.edu.br</p></li>
+            <li><p><strong>E-mail:</strong> tco4@aluno.ifnmg.edu.br</p></li>
             <li><p><strong>Contato:</strong> +55 33 999558429</p></li>
         </ul>
     </footer>
