--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
     <header>
         <img class="icon" src="img/image.png">
-        <h1 class="h1-1 new-amsterdam-regular">CORINTHIANS</h1>
+        <h1 class="h1-1 new-amsterdam-regular">
+            <a href="https://www.corinthians.com.br/" target="_blank" class="redirect">CORINTHIANS</a>
+        </h1>
+        
         <nav>
             <ul class="menu">
                     <li><a class="new-amsterdam-regular" href="index.html">História</a></li>
@@ -25,7 +28,7 @@
     
     <main>
         <div class="conteiner">
-            <h1>História do Sport Club Corinthians Paulista <br></h1>
+            <h1 class="h1-2">História do Sport Club Corinthians Paulista <br></h1>
 
             <P class="conteudo">O Sport Club Corinthians Paulista, popularmente conhecido como Corinthians, é um dos clubes de futebol 
                 mais icônicos e populares do Brasil e do mundo. Fundado em 1º de setembro de 1910, em São Paulo, 
@@ -119,7 +122,7 @@
         <ul>
             <li><a href="https://www.instagram.com/talles_cardoso1/" target="_blank">Instagram</a></li>
             <li><a href="https://github.com/Talles2305" target="_blank">GitHub</a></li>
-            <li><p><strong>E-mail:</strong> tco4@alunp.ifnmg.edu.br</p></li>
+            <li><p><strong>E-mail:</strong> tco4@aluno.ifnmg.edu.br</p></li>
             <li><p><strong>Contato:</strong> +55 33 999558429</p></li>
         </ul>
     </footer>
