--- a/pagina2.html
+++ b/pagina2.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Títulos</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=New+Amsterdam&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -27,7 +27,7 @@
     
     <main>
         <div class="conteiner">
-            <h1>Principais Títulos do Timão</h1>
+            <h1 class="h1-2">Principais Títulos do Timão</h1>
             <p class="conteudo">
                 Os títulos conquistados pelo Sport Club Corinthians Paulista refletem sua importância e sucesso no cenário do futebol 
                 brasileiro e internacional. Com uma trajetória marcada por conquistas significativas, o Corinthians se destaca como 
@@ -57,7 +57,7 @@
             </ul>
 
             <img class="conteudo-lado" src="img/brasileirao.png" alt="">
-            <iframe class="conteudo-lado" width="560" height="315" src="https://www.youtube.com/embed/DIfhRAx2SXM?si=wsX4SEhwvpaEeQfL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe class="conteudo-lado" src="https://www.youtube.com/embed/DIfhRAx2SXM?si=wsX4SEhwvpaEeQfL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             
             <h2 class="conteudo">Copa do Brasil</h2>
             <p class="conteudo">
