--- a/pagina3.html
+++ b/pagina3.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Time Feminino</title>
     <link rel="stylesheet" href="estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=New+Amsterdam&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=New+Amsterdam&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -27,7 +27,7 @@
     
     <main>
         <div class="conteiner">
-            <h1>Time Feminino</h1>
+            <h1 class="h1-2">Time Feminino</h1>
             <p class="conteudo">
                 O time feminino do Corinthians é um dos mais vitoriosos e reconhecidos do futebol feminino no Brasil. 
                 Fundado em 1997, mas oficialmente reestruturado em 2016, o time se destacou rapidamente como uma força 
