--- a/pagina4.html
+++ b/pagina4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,7 +30,7 @@
         <div class="conteiner">
             <h1 class="h1-2">Formulário</h1>
             
-            <form class="formulario conteudo" action="submit_form.php" method="post">
+            <form class="formulario conteudo" action="" method="post">
                 <div class="form-group conteudo-lado">
                     <div class="nome-sobrenome">
                         <label for="nome">Nome:</label>
@@ -53,7 +53,7 @@
 
                         <div class="coment">
                             <label for="comentario">Comentário</label>
-                            <textarea id="comentario" name="comentario" placeholder="Explique porque o título escolhido foi mais emocionante"></textarea>
+                            <textarea id="comentario" name="comentario" placeholder="Explique porque o título escolhido foi mais marcante para você"></textarea>
                         </div>
                     </div>
                 </div>
