--- a/pagina4.html
+++ b/pagina4.html
@@ -30,7 +30,7 @@
         <div class="conteiner">
             <h1 class="h1-2">Formulário</h1>
             
-            <form class="formulario conteudo" action="" method="post">
+            <form class="formulario conteudo" action="" method="get">
                 <div class="form-group conteudo-lado">
                     <div class="nome-sobrenome">
                         <label for="nome">Nome:</label>
