--- a/pagina4.html
+++ b/pagina4.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulário de Contato</title>
     <link rel="stylesheet" href="estilo.css">
-    <link rel="stylesheet" href="estilo.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=New+Amsterdam&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -18,19 +17,19 @@
         </h1>
         <nav>
             <ul class="menu">
-                    <li><a class="new-amsterdam-regular" href="index.html">História</a></li>
-                    <li><a class="new-amsterdam-regular" href="pagina2.html">Título</a></li>
-                    <li><a class="new-amsterdam-regular" href="pagina3.html">Feminino</a></li>
-                    <li><a class="new-amsterdam-regular" href="pagina4.html">Formulário</a></li>
+                <li><a class="new-amsterdam-regular" href="index.html">História</a></li>
+                <li><a class="new-amsterdam-regular" href="pagina2.html">Título</a></li>
+                <li><a class="new-amsterdam-regular" href="pagina3.html">Feminino</a></li>
+                <li><a class="new-amsterdam-regular" href="pagina4.html">Formulário</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <div class="conteiner">
+        <div class="conteiner-2">
             <h1 class="h1-2">Formulário</h1>
             
-            <form class="formulario conteudo" action="" method="get">
+            <form class="formulario" action="" method="get">
                 <div class="form-group conteudo-lado">
                     <div class="nome-sobrenome">
                         <label for="nome">Nome:</label>
@@ -62,7 +61,6 @@
         </div>
     </main>
     
-
     <footer>
         <ul>
             <li><a href="https://www.instagram.com/talles_cardoso1/" target="_blank">Instagram</a></li>
