--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img class="icon" src="img/image.png">
+        <img class="icon" src="images/image.png">
         <h1 class="h1-1 new-amsterdam-regular">
             <a href="https://www.corinthians.com.br/" target="_blank" class="redirect">CORINTHIANS</a>
         </h1>
@@ -80,7 +80,7 @@
                 em 1982 e 1983. Nos anos 1990, o Corinthians conquistou seu primeiro Campeonato Brasileiro em 1990 e, 
                 em 2000, venceu o primeiro Mundial de Clubes da FIFA.
             </p>
-            <img class="conteudo-lado" src="img/torcida1.png" alt="">
+            <img class="conteudo-lado" src="images/torcida1.png" alt="">
 
             <h2>A Era Moderna: Libertadores e Mundial (2000-2020)</h2>
             <p class="conteudo">
@@ -100,7 +100,7 @@
                     dos torcedores é frequentemente citado como uma das forças motrizes do clube, ajudando o time a alcançar grandes feitos, 
                     especialmente nos momentos de maior desafio.
             </p>
-            <img class="conteudo-lado" src="img/gavioes-da-fiel.jpg" alt="Tocida" width="270" height="300">
+            <img class="conteudo-lado" src="images/gavioes-da-fiel.jpg" alt="Tocida" width="270" height="300">
 
             <h2>O Legado do Corinthians</h2>
 
