--- a/pagina2.html
+++ b/pagina2.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img class="icon" src="img/image.png" alt="Icone">
+        <img class="icon" src="images/image.png" alt="Icone">
         <h1 class="h1-1 new-amsterdam-regular">
             <a href="https://www.corinthians.com.br/" target="_blank" class="redirect">CORINTHIANS</a>
         </h1>
@@ -56,7 +56,7 @@
                 </li>
             </ul>
 
-            <img class="conteudo-lado" src="img/brasileirao.png" alt="">
+            <img class="conteudo-lado" src="images/brasileirao.png" alt="">
             <iframe class="conteudo-lado" src="https://www.youtube.com/embed/DIfhRAx2SXM?si=wsX4SEhwvpaEeQfL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             
             <h2 class="conteudo">Copa do Brasil</h2>
@@ -75,7 +75,7 @@
                     </ul>
                 </li>
             </ul>
-            <img class="conteudo-lado" src="img/copa-do-brasil.png" alt="">
+            <img class="conteudo-lado" src="images/copa-do-brasil.png" alt="">
             
             <h2 class="conteudo">Mundial</h2>
             <p class="conteudo">
@@ -91,7 +91,7 @@
                     </ul>
                 </li>
             </ul>
-            <img class="conteudo-lado" src="img/mundial.jpg" alt="">
+            <img class="conteudo-lado" src="images/mundial.jpg" alt="">
 
             <h2>Campeonato Paulista</h2>
             <p class="conteudo">
@@ -114,7 +114,7 @@
                     <li>2018</li>
                 </ul>
             </ul>
-            <img class="conteudo-lado" src="img/paulista.png" alt="">
+            <img class="conteudo-lado" src="images/paulista.png" alt="">
         </div>
     </main>
    
