--- a/pagina3.html
+++ b/pagina3.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img class="icon" src="img/image.png" alt="Icone">
+        <img class="icon" src="images/image.png" alt="Icone">
         <h1 class="h1-1 new-amsterdam-regular">
             <a href="https://www.corinthians.com.br/" target="_blank" class="redirect">CORINTHIANS</a>
         </h1>
@@ -40,7 +40,7 @@
                 Libertadores da América Feminina várias vezes, incluindo vitórias em 2017, 2019, e 2021.
             </p>
 
-            <img class="conteudo-lado" src="img/Corinthians-feminino-2.png" alt="">
+            <img class="conteudo-lado" src="images/Corinthians-feminino-2.png" alt="">
 
             <h2 class="conteudo">Estrutura e Apoio</h2>
 
